Add new enchantments from v. 1.3.4 update

--- a/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
+++ b/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Cheats.Designer.cs">
       <DependentUpon>Cheats.cs</DependentUpon>
     </Compile>
+    <Compile Include="ShuffleItems.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
