Mega Speedups alpha version
Fetches maximum speedup values from pokemondata.bin
Added Bulk Edit code for speedups
Small UI adjustments

Known issue : Mega Mewtwo X speedup count circles between values 0 to 3
(instead of maximum = 5)

--- a/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
+++ b/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
@@ -249,6 +249,7 @@
     <Content Include="Resources\img\mega_pokemon_531_lo.png" />
     <Content Include="Resources\img\mega_pokemon_719.png" />
     <Content Include="Resources\img\mega_pokemon_719_lo.png" />
+    <None Include="Resources\img\mega_speedup.png" />
     <Content Include="Resources\img\Plate.png" />
     <Content Include="Resources\img\pokemon_000.png" />
     <Content Include="Resources\img\pokemon_001.png" />
