Useless fancy stuff
Fixed stage images: now displays a different plate if the stage is a
mega pokemon (except for event stages, because they always have the
standard plate in game).

Added a team preview. You can click an icon to see the corresponding
pokemon in Owned box. No team editor because I think it's useless (team
cannot include uncatched pokemons).

Small UI adjustments to fit these changes.

--- a/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
+++ b/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
@@ -271,6 +271,8 @@
     <Content Include="Resources\img\mega_pokemon_719_lo.png" />
     <None Include="Resources\img\mega_speedup.png" />
     <Content Include="Resources\img\Plate.png" />
+    <None Include="Resources\img\PlateMega.png" />
+    <None Include="Resources\img\Plate1.png" />
     <Content Include="Resources\img\pokemon_000.png" />
     <Content Include="Resources\img\pokemon_001.png" />
     <None Include="Resources\img\pokemon_001_01.png" />
