Great Refactor (and click events)
Refactored code, to be hopefully more C#/OOP-compliant.
Added a Database class that generates all resource files needed and is
accessible everywhere (no need to pass a lot of param to Cheats()
anymore).
Added a ToolFunctions class that provides generic functions to
search/edit savedata (formerly used in Cheats() only).

Added Click events
- On Pokemon picture : switches between Caught with all stones, max
level, lollipops & speedups, and Uncaught (with everything properly
reset).
-On Stages pictures : Left click to circle between ranks, Right click to
(un)complete stage.
-On "Main Stages" Label, switches on/off stage display override (see
below)

Now an uncompleted stage is displayed in black overlay (as in-game),
click "Main Stages" label to override this and see stage pictures
normally.

Also, now when a completed Main stage is uncompleted, all stages after
it are uncompleted too, and when an uncompleted stage is completed, all
stages before are completed (for legitimacy purposes, this is in testing
phase). Expert and Event stages aren't affected.

Small UI Tweaks

--- a/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
+++ b/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Cheats.Designer.cs">
       <DependentUpon>Cheats.cs</DependentUpon>
     </Compile>
+    <Compile Include="Database.cs" />
     <Compile Include="ShuffleItems.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
@@ -79,6 +80,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ToolFunctions.cs" />
     <EmbeddedResource Include="Cheats.resx">
       <DependentUpon>Cheats.cs</DependentUpon>
     </EmbeddedResource>
