--- a/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
+++ b/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
@@ -1219,6 +1219,9 @@
     <None Include="Resources\img\pokemon_720.png" />
     <None Include="Resources\img\pokemon_720_01.png" />
     <None Include="Resources\img\pokemon_721.png" />
+    <None Include="Resources\img\valid.png" />
+    <None Include="Resources\img\warn.png" />
+    <None Include="Resources\lollipop.png" />
     <Content Include="Resources\txt\mons.txt" />
     <Content Include="Resources\txt\species.txt" />
   </ItemGroup>
