--- a/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
+++ b/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
@@ -107,6 +107,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <None Include="Resources\bin\megaStone.bin" />
+    <None Include="Resources\bin\PokemonAbility.bin" />
     <None Include="Resources\bin\pokemonData.bin" />
     <None Include="Resources\bin\pokemonLevel.bin" />
     <None Include="Resources\bin\stageData.bin" />
