Tab navigating through Items
Also fixes Resources box overwriting values with old save values when a
new one is loaded.

--- a/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
+++ b/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
@@ -80,6 +80,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TabbedPropertyGrid.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="ToolFunctions.cs" />
     <EmbeddedResource Include="Cheats.resx">
       <DependentUpon>Cheats.cs</DependentUpon>
