--- a/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
+++ b/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
@@ -1224,6 +1224,7 @@
     <None Include="Resources\img\pokemon_721.png" />
     <None Include="Resources\img\valid.png" />
     <None Include="Resources\img\warn.png" />
+    <None Include="Resources\img\skill.png" />
     <Content Include="Resources\txt\mons.txt" />
     <Content Include="Resources\txt\species.txt" />
   </ItemGroup>
