--- a/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
+++ b/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
@@ -71,6 +71,12 @@
       <DependentUpon>Cheats.cs</DependentUpon>
     </Compile>
     <Compile Include="Database.cs" />
+    <Compile Include="NUP_Popup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NUP_Popup.Designer.cs">
+      <DependentUpon>NUP_Popup.cs</DependentUpon>
+    </Compile>
     <Compile Include="ShuffleItems.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
@@ -89,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NUP_Popup.resx">
+      <DependentUpon>NUP_Popup.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
