--- a/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
+++ b/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
@@ -77,6 +77,12 @@
     <Compile Include="NUP_Popup.Designer.cs">
       <DependentUpon>NUP_Popup.cs</DependentUpon>
     </Compile>
+    <Compile Include="Pokathlon_Popup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Pokathlon_Popup.Designer.cs">
+      <DependentUpon>Pokathlon_Popup.cs</DependentUpon>
+    </Compile>
     <Compile Include="ShuffleItems.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
@@ -98,6 +104,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="NUP_Popup.resx">
       <DependentUpon>NUP_Popup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Pokathlon_Popup.resx">
+      <DependentUpon>Pokathlon_Popup.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -1235,6 +1244,7 @@
     <None Include="Resources\img\warn.png" />
     <None Include="Resources\img\skill.png" />
     <Content Include="Resources\txt\mons.txt" />
+    <None Include="Resources\txt\pokathlon.txt" />
     <Content Include="Resources\txt\species.txt" />
   </ItemGroup>
   <ItemGroup>
