Improved Mission cards support
Added a new resource file : MissionCard.bin (which is arc/Configuration
Tables (B6680000)/12 in 1.3.15's files)

This allows the editor to display the correct amount of missions per
card and hide unreleased missions.

--- a/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
+++ b/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
@@ -137,6 +137,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <None Include="Resources\bin\megaStone.bin" />
+    <None Include="Resources\bin\MissionCard.bin" />
     <None Include="Resources\bin\PokemonAbility.bin" />
     <None Include="Resources\bin\pokemonData.bin" />
     <None Include="Resources\bin\pokemonLevel.bin" />
