--- a/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
+++ b/Pokemon Shuffle Save Editor/Pokemon Shuffle Save Editor.csproj
@@ -137,6 +137,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <None Include="Resources\bin\megaStone.bin" />
+    <None Include="Resources\bin\messagePokedex_US.bin" />
     <None Include="Resources\bin\MissionCard.bin" />
     <None Include="Resources\bin\PokemonAbility.bin" />
     <None Include="Resources\bin\pokemonData.bin" />
@@ -1254,6 +1255,7 @@
     <None Include="Resources\img\warn.png" />
     <None Include="Resources\img\skill.png" />
     <Content Include="Resources\txt\mons.txt" />
+    <None Include="Resources\messagePokedex_US.bin" />
     <None Include="Resources\txt\pokathlon.txt" />
     <Content Include="Resources\txt\species.txt" />
   </ItemGroup>
